--- a/config.cfg
+++ b/config.cfg
@@ -116,12 +116,12 @@ office=700
 door connection type=socket
 
 [List]
-cam1=rtsp://admin:startup123@172.20.0.4:554/Streaming/Channels/101
-cam2=rtsp://admin:startup123@172.20.0.5:554/Streaming/Channels/101
-cam3=rtsp://admin:startup123@172.20.0.6:554/Streaming/Channels/101
-cam6=rtsp://admin:startup123@192.168.1.221:554/Streaming/Channels/101
-cam7=rtsp://admin:startup123@172.20.0.10:554/Streaming/Channels/101
-cam8=rtsp://admin:startup123@192.168.1.220:554/Streaming/Channels/101
-cam9=rtsp://admin:startup123@192.168.1.222:554/Streaming/Channels/101
-cam10=rtsp://admin:startup123@172.20.0.2:554/Streaming/Channels/101
-cam11=
+cam1=rtsp://admin:startup123@172.20.0.4:554?tcp/mjpeg/ch1
+cam2=rtsp://admin:startup123@172.20.0.5:554?tcp/mjpeg/ch1
+cam3=rtsp://admin:startup123@172.20.0.6:554?tcp/mjpeg/ch1
+cam6=rtsp://admin:startup123@192.168.1.221:554?tcp/mjpeg/ch1
+cam7=rtsp://admin:startup123@172.20.0.10:554?tcp/mjpeg/ch1
+cam8=rtsp://admin:startup123@192.168.1.220:554?tcp/mjpeg/ch1
+cam9=rtsp://admin:startup123@192.168.1.222:554?tcp/mjpeg/ch1
+cam10=rtsp://admin:startup123@172.20.0.2:554?tcp/mjpeg/ch1
+cam11=rtsp://admin:startup123@172.20.0.2:554/Streaming/Channels/101
